# aive-protocol

./: .gitignore  README.md  pyproject.toml
.github/workflows/: aive-dry-run.yml
aive/: __init__.py  engine.py  models.py
examples/: aive-2026-0001.json
scripts/: patch_plan.py  scan_repo.py  verify_repo.py
tests/: test_engine.py
