[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aive-protocol"
version = "0.1.0"
description = "AIVE: AI-Validated Exploit exploit-to-patch automation for GitHub repositories"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "beginnerslvl" }
]
keywords = ["ai", "security", "github", "patching", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]

[tool.setuptools]
packages = ["aive"]
